--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <p>If you have any questions about how Unscroll handles your data, please contact us:</p>
             <p><strong>Email:</strong> <a href="mailto:un0scroll@gmail.com">un0scroll@gmail.com</a></p>
             <p><strong>Response Time:</strong> We aim to respond within 48 hours</p>
-            <p><a href="privacy-policy.html">View Full Privacy Policy →</a></p>
+            <p><a href="https://sonugp2003.github.io/stop-scroll-privacy-policy/">View Full Privacy Policy →</a></p>
         </div>
 
         <hr style="margin: 40px 0; border: none; border-top: 1px solid #e5e7eb;">
